// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Get a free hosted Postgres database in seconds: `npx create-db`

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  ADMIN
  PROJECT_MANAGER
  TEAM_MEMBER
  CAQ
  AUDITEUR_EXTERNE
}

enum ProjectStatus {
  PLANNED
  IN_PROGRESS
  DELAYED
  COMPLETED
}

enum TaskStatus {
  TODO
  IN_PROGRESS
  DONE
}

enum CorrectiveActionStatus {
  OPEN
  IN_PROGRESS
  DONE
  CANCELLED
}

enum CorrectiveActionSeverity {
  LOW
  MEDIUM
  HIGH
  CRITICAL
}

enum CorrectiveActionSource {
  OVERDUE_TASK
  DELAYED_PROJECT
  KPI_DEVIATION
  MANUAL
}

enum CorrectiveActionType {
  CORRECTIVE
  PREVENTIVE
}

enum EffectivenessStatus {
  PENDING
  VERIFIED
  NOT_EFFECTIVE
}

enum NonConformityStatus {
  OPEN
  ANALYSIS
  CLOSED
}

enum VeracityLevel {
  FALSE
  RATHER_FALSE
  RATHER_TRUE
  TRUE
}

model User {
  id                        String             @id @default(cuid())
  fullName                  String
  email                     String             @unique
  passwordHash              String
  role                      Role               @default(TEAM_MEMBER)
  tasks                     Task[]
  documents                 Document[]
  detectedNonConformities   NonConformity[]    @relation("NonConformityDetector")
  verifiedCorrectiveActions CorrectiveAction[] @relation("CorrectiveActionVerifier")
  ownedCorrectiveActions    CorrectiveAction[] @relation("CorrectiveActionOwner")
  createdCorrectiveActions  CorrectiveAction[] @relation("CorrectiveActionCreator")
  createdAt                 DateTime           @default(now())
  updatedAt                 DateTime           @updatedAt
}

model Department {
  id        String    @id @default(cuid())
  name      String    @unique
  code      String    @unique
  processes Process[]
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
}

model Project {
  id                String             @id @default(cuid())
  name              String
  description       String?
  ownerId           String?
  status            ProjectStatus      @default(PLANNED)
  startDate         DateTime?
  endDate           DateTime?
  processes         ProjectProcess[]
  tasks             Task[]
  correctiveActions CorrectiveAction[]
  createdAt         DateTime           @default(now())
  updatedAt         DateTime           @updatedAt
}

model Process {
  id                     String                         @id @default(cuid())
  name                   String
  description            String?
  departmentId           String?
  objectives             String[]                       @default([])
  responsiblePerson      String
  inputs                 String[]
  outputs                String[]
  knowledgeItems         String[]                       @default([])
  indicators             Json
  bpmnXml                String?
  kpis                   Kpi[]
  nonConformities        NonConformity[]
  projects               ProjectProcess[]
  tasks                  Task[]
  correctiveActions      CorrectiveAction[]
  documents              Document[]
  department             Department?                    @relation(fields: [departmentId], references: [id], onDelete: SetNull)
  requirementAssessments ProcessRequirementAssessment[]
  createdAt              DateTime                       @default(now())
  updatedAt              DateTime                       @updatedAt
  processCriterions      ProcessCriterion[]

  @@index([departmentId])
}

model ProcessRequirementAssessment {
  id              String        @id @default(cuid())
  processId       String
  requirementCode String
  requirementName String
  score           Float         @default(0)
  veracityLevel   VeracityLevel @default(FALSE)
  notes           String?
  process         Process       @relation(fields: [processId], references: [id], onDelete: Cascade)
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt

  @@unique([processId, requirementCode])
  @@index([processId])
}

model Kpi {
  id          String   @id @default(cuid())
  name        String
  description String?
  target      Float
  current     Float    @default(0)
  unit        String?
  processId   String
  process     Process  @relation(fields: [processId], references: [id], onDelete: Cascade)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  @@index([processId])
}

model ProjectProcess {
  projectId String
  processId String
  project   Project @relation(fields: [projectId], references: [id], onDelete: Cascade)
  process   Process @relation(fields: [processId], references: [id], onDelete: Cascade)

  @@id([projectId, processId])
}

model Task {
  id                String             @id @default(cuid())
  title             String
  description       String?
  status            TaskStatus         @default(TODO)
  dueDate           DateTime?
  plannedHours      Float?
  actualHours       Float?
  startedAt         DateTime?
  completedAt       DateTime?
  projectId         String
  processId         String
  assigneeId        String?
  project           Project            @relation(fields: [projectId], references: [id], onDelete: Cascade)
  process           Process            @relation(fields: [processId], references: [id], onDelete: Cascade)
  assignee          User?              @relation(fields: [assigneeId], references: [id], onDelete: SetNull)
  documents         Document[]
  correctiveActions CorrectiveAction[]
  createdAt         DateTime           @default(now())
  updatedAt         DateTime           @updatedAt
}

model CorrectiveAction {
  id                    String                   @id @default(cuid())
  title                 String
  description           String?
  recommendation        String?
  actionType            CorrectiveActionType     @default(CORRECTIVE)
  status                CorrectiveActionStatus   @default(OPEN)
  severity              CorrectiveActionSeverity @default(MEDIUM)
  source                CorrectiveActionSource   @default(MANUAL)
  rootCause             String?
  containmentAction     String?
  effectivenessCriteria String?
  effectivenessStatus   EffectivenessStatus      @default(PENDING)
  verificationComment   String?
  verifiedAt            DateTime?
  nonConformityId       String?
  isoClause             String?
  dueDate               DateTime?
  projectId             String?
  processId             String?
  taskId                String?
  ownerId               String?
  createdById           String
  verifiedById          String?
  nonConformity         NonConformity?           @relation(fields: [nonConformityId], references: [id], onDelete: SetNull)
  project               Project?                 @relation(fields: [projectId], references: [id], onDelete: SetNull)
  process               Process?                 @relation(fields: [processId], references: [id], onDelete: SetNull)
  task                  Task?                    @relation(fields: [taskId], references: [id], onDelete: SetNull)
  owner                 User?                    @relation("CorrectiveActionOwner", fields: [ownerId], references: [id], onDelete: SetNull)
  createdBy             User                     @relation("CorrectiveActionCreator", fields: [createdById], references: [id], onDelete: Cascade)
  verifiedBy            User?                    @relation("CorrectiveActionVerifier", fields: [verifiedById], references: [id], onDelete: SetNull)
  createdAt             DateTime                 @default(now())
  updatedAt             DateTime                 @updatedAt

  @@index([status])
  @@index([severity])
  @@index([projectId])
  @@index([processId])
  @@index([taskId])
  @@index([ownerId])
  @@index([nonConformityId])
  @@index([verifiedById])
}

model NonConformity {
  id                String                   @id @default(cuid())
  title             String
  description       String?
  status            NonConformityStatus      @default(OPEN)
  severity          CorrectiveActionSeverity @default(MEDIUM)
  detectedAt        DateTime                 @default(now())
  processId         String?
  detectedById      String
  process           Process?                 @relation(fields: [processId], references: [id], onDelete: SetNull)
  detectedBy        User                     @relation("NonConformityDetector", fields: [detectedById], references: [id], onDelete: Cascade)
  correctiveActions CorrectiveAction[]
  createdAt         DateTime                 @default(now())
  updatedAt         DateTime                 @updatedAt

  @@index([status])
  @@index([severity])
  @@index([processId])
  @@index([detectedById])
}

model Document {
  id           String   @id @default(cuid())
  name         String
  mimeType     String
  size         Int
  path         String
  processId    String?
  taskId       String?
  uploadedById String
  process      Process? @relation(fields: [processId], references: [id], onDelete: SetNull)
  task         Task?    @relation(fields: [taskId], references: [id], onDelete: SetNull)
  uploadedBy   User     @relation(fields: [uploadedById], references: [id], onDelete: Cascade)
  createdAt    DateTime @default(now())

  @@index([processId])
  @@index([taskId])
}

model Criterion {
  id          String   @id @default(cuid())
  code        String   @unique
  title       String
  description String?
  clause      String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt

  processCriteria ProcessCriterion[]
}

model ProcessCriterion {
  id            String        @id @default(cuid())
  processId     String
  criterionId   String
  selected      Boolean       @default(true)
  score         Float         @default(0)
  rate          Int?
  veracityLevel VeracityLevel @default(FALSE)
  notes         String?
  createdAt     DateTime      @default(now())
  updatedAt     DateTime      @updatedAt

  process   Process             @relation(fields: [processId], references: [id], onDelete: Cascade)
  criterion Criterion           @relation(fields: [criterionId], references: [id], onDelete: Cascade)
  evidences CriterionEvidence[]

  @@unique([processId, criterionId])
  @@index([processId])
  @@index([criterionId])
}

model CriterionEvidence {
  id                 String   @id @default(cuid())
  processCriterionId String
  type               String?
  description        String?
  documentId         String?
  url                String?
  createdAt          DateTime @default(now())

  processCriterion ProcessCriterion @relation(fields: [processCriterionId], references: [id], onDelete: Cascade)
}
